@@ -83,13 +83,26 @@ namespace scene
 		//! recalculates the bounding box
 		void recalculateBoundingBox()
 		{
-			if (MeshBuffers.size())
+			bool hasMeshBufferBBox = false;
+			for (u32 i=0; i<MeshBuffers.size(); ++i)
 			{
-				BoundingBox = MeshBuffers[0]->getBoundingBox();
-				for (u32 i=1; i<MeshBuffers.size(); ++i)
-					BoundingBox.addInternalBox(MeshBuffers[i]->getBoundingBox());
+				const core::aabbox3df& bb = MeshBuffers[i]->getBoundingBox();
+				if ( !bb.isEmpty() )
+				{
+					if ( !hasMeshBufferBBox )
+					{
+						hasMeshBufferBBox = true;
+						BoundingBox = bb;
+					}
+					else
+					{
+						BoundingBox.addInternalBox(bb);
+					}
+
+				}
 			}
-			else
+
+			if ( !hasMeshBufferBBox )
 				BoundingBox.reset(0.0f, 0.0f, 0.0f);
 		}
 
